<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#CDCACA"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/birds_image" />

    <TextView
        android:id="@+id/tvOutputTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_alignStart="@id/ivProfile"
        android:layout_marginTop="20dp"
        android:text="@string/output"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOutputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/tvOutputTitle"
        android:text="Koyel"
        android:textColor="#EA0808"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvClickHint"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOutputValue"
        android:layout_alignStart="@id/tvOutputValue"
        android:layout_marginTop="10dp"
        android:text="@string/click_on_the_result_text_to_search_on_google"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTimeElapsedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClickHint"
        android:layout_alignStart="@id/tvOutputTitle"
        android:layout_marginTop="10dp"
        android:text="@string/time_elapsed"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTimeElapsedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClickHint"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/tvOutputTitle"
        android:text="jsbc" />

    <TextView
        android:id="@+id/tvBatteryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimeElapsedTitle"
        android:layout_alignStart="@id/tvOutputTitle"
        android:layout_marginTop="10dp"
        android:text="@string/battery_level"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBatteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTimeElapsedValue"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/tvOutputTitle"
        android:text="dhjk" />


</RelativeLayout>